--- a/santiago_papeleria_frontend/src/app/pages/profile/profile.html
+++ b/santiago_papeleria_frontend/src/app/pages/profile/profile.html
@@ -226,6 +226,11 @@
                                         class="w-full bg-gray-50 border border-gray-200 rounded p-2.5 text-sm">
                                 </div>
                                 <div>
+                                    <label class="block text-xs font-bold text-gray-600 mb-1">Código Postal</label>
+                                    <input type="text" formControlName="codigo_postal" placeholder="Ej. 110101"
+                                        class="w-full bg-gray-50 border border-gray-200 rounded p-2.5 text-sm">
+                                </div>
+                                <div>
                                     <label class="block text-xs font-bold text-gray-600 mb-1">Calle Principal /
                                         dirección</label>
                                     <input type="text" formControlName="calle_principal"
